# liine-takehome

./: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: urls.py
config/settings/: base.py  local.py  production.py
restaurants/: models.py  parsing.py  urls.py  views.py
restaurants/management/commands/: load_restaurants.py
restaurants/migrations/: 0001_initial.py
restaurants/tests/: test_integration.py  test_models.py  test_parsing.py  test_views.py
restaurants/tests/fixtures/: test_restaurants.csv
